--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -5,19 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>diary4us</title>
 </head>
 
 <body>
     <header>
-        <h1>header</h1>
+        <h1>Diary 4 Us <i class="fas fa-book"></i></h1>
+        <h2>우리사이의 다이어리</h2>
+
     </header>
     <main>
-        <div id="main-nav">nav</div>
+        <div id="main-nav">nav
+            <ul id="main-nav-ul">
+                <li><i class="fas fa-pen"></i>다이어리 쓰기</li>
+                <li><i class="fas fa-pen-fancy"></i>지난 다이어리</li>
+                <li><i class="fas fa-cloud-moon"></i>내 기분</li>
+                <li><i class="far fa-calendar-alt"></i>일정관리</li>
+            </ul>
+        </div>
         <div id="main-main">main page</div>
     </main>
     <footer>
-        footer
+        @2020 elly-justin
     </footer>
 </body>
 
