feat: diary writing button and css
diary write function and css

--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -18,8 +18,10 @@
     <main>
         <div id="main-nav">nav
             <ul id="main-nav-ul">
-                <li><i class="fas fa-pen"></i>다이어리 쓰기</li>
-                <li><i class="fas fa-pen-fancy"></i>지난 다이어리</li>
+                <li>
+                    <a href="./write.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
+                </li>
+                <li><i class="fas fa-pen-fancy"></i>모든 다이어리</li>
                 <li><i class="fas fa-cloud-moon"></i>내 기분</li>
                 <li><i class="far fa-calendar-alt"></i>일정관리</li>
             </ul>
@@ -29,6 +31,7 @@
     <footer>
         @2020 elly-justin
     </footer>
+    <script src="./static/js/main.js"></script>
 </body>
 
 </html>
