--- a/src/main/webapp/WEB-INF/index.html
+++ b/src/main/webapp/WEB-INF/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./static/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>diary4us</title>
+    <script src="./includeHTML.js"></script>
 </head>
 
 <body>
@@ -16,22 +17,18 @@
 
     </header>
     <main>
-        <div id="main-nav">nav
-            <ul id="main-nav-ul">
-                <li>
-                    <a href="./write.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
-                </li>
-                <li><i class="fas fa-pen-fancy"></i>모든 다이어리</li>
-                <li><i class="fas fa-cloud-moon"></i>내 기분</li>
-                <li><i class="far fa-calendar-alt"></i>일정관리</li>
-            </ul>
-        </div>
+        <!-- navigator -->
+        <header include-html="./nav.html"></header>
+
+
         <div id="main-main">main page</div>
     </main>
-    <footer>
-        @2020 elly-justin
-    </footer>
+    <!-- footer -->
+    <footer include-html="./footer.html"></footer>
     <script src="./static/js/main.js"></script>
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
