--- a/src/main/webapp/WEB-INF/write.html
+++ b/src/main/webapp/WEB-INF/write.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./static/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>diary4us</title>
+    <script src="./includeHTML.js"></script>
 </head>
 
 <body>
@@ -16,21 +17,14 @@
 
     </header>
     <main>
-        <div id="main-nav">diary 4 us
-            <ul id="main-nav-ul">
-                <li>
-                    <a href="./write.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
-                </li>
-                <li><i class="fas fa-pen-fancy"></i>모든 다이어리</li>
-                <li><i class="fas fa-cloud-moon"></i>내 기분</li>
-                <li><i class="far fa-calendar-alt"></i>일정관리</li>
-            </ul>
-        </div>
+        <!-- navigator -->
+        <header include-html="./nav.html"></header>
+
         <div id="main-main">
             <div>반갑습니다. 일기를 쓰세요.</div>
             <div id="new-diary">
                 <!-- BE destination -->
-                <form action="#" method="post">
+                <form action="/writeDiary" method="post">
                     <div id="diary-header">
                         <input type="text" placeholder="title" name="diaryTitle" id="diary-title">
                         <input type="password" placeholder="password" name="diaryPw" id="diary-pw">
@@ -43,11 +37,14 @@
             <input class="btn-diary" type="submit" value="글쓰기">
             <button class="btn-diary" onclick="refresh()">새로고침</button>
         </div>
+
     </main>
-    <footer>
-        @2020 elly-justin
-    </footer>
-    <script src="./static/js/main.js "></script>
+    <!-- footer -->
+    <footer include-html="./footer.html"></footer>
+    <script src="./static/js/main.js"></script>
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
