feat: add calendar
new function; calendar displacement

--- a/src/main/webapp/WEB-INF/nav.html
+++ b/src/main/webapp/WEB-INF/nav.html
@@ -8,6 +8,10 @@
             <a href="./read.html"> <i class="fas fa-pen-fancy"></i>모든 다이어리</a>
         </li>
         <li><i class="fas fa-cloud-moon"></i>내 기분</li>
-        <li><i class="far fa-calendar-alt"></i>일정관리</li>
+        <li>
+
+            <a href="./calendar.html"> <i class="far fa-calendar-alt"></i>일정관리</a>
+        </li>
+
     </ul>
 </div>
