style: modularize header
header is modularized into HTML

--- a/src/main/webapp/WEB-INF/calendar.html
+++ b/src/main/webapp/WEB-INF/calendar.html
@@ -22,11 +22,7 @@
 </head>
 
 <body>
-    <header>
-        <h1>Diary 4 Us <i class="fas fa-book"></i></h1>
-        <h2>우리사이의 다이어리</h2>
-
-    </header>
+    <header include-html="./header.html"></header>
     <main>
         <!-- navigator -->
         <header include-html="./nav.html"></header>
