--- a/src/main/webapp/WEB-INF/nav.html
+++ b/src/main/webapp/WEB-INF/nav.html
@@ -5,7 +5,7 @@
             <a href="./write.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
         </li>
         <li>
-            <a href="./read.html"> <i class="fas fa-pen-fancy"></i>모든 다이어리</a>
+            <a href="./board/boardList.jsp"> <i class="fas fa-pen-fancy"></i>모든 다이어리</a>
         </li>
         <li><i class="fas fa-cloud-moon"></i>내 기분</li>
         <li>
