--- a/src/main/webapp/WEB-INF/nav.html
+++ b/src/main/webapp/WEB-INF/nav.html
@@ -2,15 +2,19 @@
     navigator
     <ul id="main-nav-ul">
         <li>
-            <a href="./write.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
+            <a href="/index.html"> <i class="fas fa-home"></i>HOME</a>
         </li>
         <li>
-            <a href="./board/boardList.jsp"> <i class="fas fa-pen-fancy"></i>모든 다이어리</a>
+            <a href="/board/boardWrite.html"> <i class="fas fa-pen"></i>다이어리 쓰기</a>
         </li>
-        <li><i class="fas fa-cloud-moon"></i>내 기분</li>
         <li>
-
-            <a href="./calendar.html"> <i class="far fa-calendar-alt"></i>일정관리</a>
+            <a href="/board/boardList.jsp"> <i class="fas fa-pen-fancy"></i>모든 다이어리</a>
+        </li>
+        <li>
+            <a href="/feeling/feelingList.jsp"><i class="fas fa-cloud-moon"></i>내 기분</a>
+        </li>
+        <li>
+            <a href="/calendar/calendar.html"> <i class="far fa-calendar-alt"></i>일정관리</a>
         </li>
 
     </ul>
