style: move to new directory and rename
from /write.html to /board/boardWrite.html
from /calendar.html to /calendar/calendar.html

--- a/src/main/webapp/WEB-INF/board/boardWrite.html
+++ b/src/main/webapp/WEB-INF/board/boardWrite.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>diary4us</title>
-    <script src="./includeHTML.js"></script>
+    <script src="/includeHTML.js"></script>
 </head>
 
 <body>
-    <header include-html="./header.html"></header>
+    <header include-html="/header.html"></header>
     <main>
         <!-- navigator -->
-        <header include-html="./nav.html"></header>
+        <header include-html="/nav.html"></header>
 
         <div id="main-main">
             <div>반갑습니다. 일기를 쓰세요.</div>
@@ -36,8 +36,8 @@
 
     </main>
     <!-- footer -->
-    <footer include-html="./footer.html"></footer>
-    <script src="./static/js/main.js"></script>
+    <footer include-html="/footer.html"></footer>
+    <script src="/static/js/main.js"></script>
     <script>
         includeHTML();
     </script>
