--- a/src/main/webapp/WEB-INF/calendar/calendar.html
+++ b/src/main/webapp/WEB-INF/calendar/calendar.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <title>diary4us</title>
-    <script src="./includeHTML.js"></script>
+    <script src="/includeHTML.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.2.0/main.css">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.2.0/main.js"></script>
     <script>
@@ -33,8 +33,8 @@
     </main>
     <!-- footer -->
     <footer include-html="./footer.html"></footer>
-    <script src="./static/js/main.js"></script>
 
+    <script src="/static/js/main.js"></script>
     <script>
         includeHTML();
     </script>
